# modal_logic_formula_prover

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  app_runner.sh  input.txt
client/: CMakeLists.txt  formula_parser.js  index.html  karma.conf.js  package-lock.json  package.json  readme.md  webpack.config.js
client/e2e/: conf.js
client/e2e/tests/: formula_building.js  satisfiability.js  spec.js
client/e2e/tests/generate/: conf.js  satisfiable.js
client/e2e/tests/static/: conf.js
client/e2e/views/: build_formula_test.html  satisfiability_test.html  standalone_test_template.html
client/scripts/: generate_formulas.sh  run-e2e-tests.sh
client/spec/: formula_proover_spec.js  formulas_map.js  spec_helper.js
client/src/: formula_parser.js  index.html  main.js
client/src/formula/: formula.js  operations.js
client/src/formula/filter/: calculate_constants.js  decompose_contact_on_Tdis.js  decompose_equivalency.js  decompose_implication.js  decompose_less.js  decompose_max_two_childs.js  filter_manager.js  remove_double_negations.js
client/src/formula/http/: http_service.js
client/src/formula/parser/: parser.js
client/src/resources/: main.js
client/visualization/: visualized-contacts.html
documentation/: mao_doc.aux  mao_doc.dvi  mao_doc.out  mao_doc.tex  mao_doc.toc  mao_presentation.tex  mao_shortslide.tex  official_documentation.tex  toni_doc.aux  toni_doc.out  toni_doc.tex  toni_doc.toc  toni_slideshow.tex  toni_slideshow_short.tex
documentation/notes/: bruteforce_spec.txt  connectivity_spec.txt  measured_model_spec.txt  model_spec.txt  parser_spec.txt  rest_server.txt  system_of_inequalities_notes.txt  tableau_spec.txt  tests_notes.txt
documentation/notes/transformed/: formula_structure_spec.txt  imodel_spec.txt  rest_server.txt  tableau_spec.txt
formula_lib/: CMakeLists.txt
formula_lib/include/: basic_bruteforce_model.h  connected_model.h  evaluator.h  formula.h  formula_mgr.h  imodel.h  library.h  logger.h  measured_model.h  model.h  normal_distribution_generator.h  optimized_measured_model.h  slow_model.h  tableau.h  thread_termiator.h  types.h
formula_lib/private/: basic_bruteforce_model.cpp  basic_bruteforce_model.h  connected_model.cpp  dnf_transformer.cpp  dnf_transformer.h  evaluator.cpp  formula.cpp  formula.h  formula_mgr.cpp  imodel.cpp  imodel.h  logger.cpp  measured_model.cpp  model.cpp  model.h  normal_distribution_generator.cpp  optimized_measured_model.cpp  slow_model.cpp  tableau.cpp  tableau.h  term.cpp  term.h  thread_terminator.cpp  types.cpp  types.h  utils.cpp  utils.h  variables_evaluations_block.cpp  variables_evaluations_block.h  variables_evaluations_block_for_positive_term.cpp  variables_evaluations_block_for_positive_term.h  variables_evaluations_block_stack.cpp  variables_evaluations_block_stack.h
formula_lib/private/linear_algebra/: system_of_inequalities.cpp  system_of_inequalities.h
formula_lib/private/linear_algebra/impl/: system_of_inequalities_impl.cpp  system_of_inequalities_impl.h
formula_proover/: CMakeLists.txt  dnf-transformer.cpp  dnf-transformer.h  dnf_transformer.cpp  dnf_transformer.h  formula.cpp  formula.h  logger.h  source.cpp  tableau.cpp  tableau.h  term.cpp  term.h
formula_proover_wasm/: CMakeLists.txt  example_formula.txt  index.html  source.cpp
modules/: ECMUtilities.cmake
parser/: CMakeLists.txt  ast.cpp  ast.h  lexer.l  main.cpp  modal_logic_formula.l  modal_logic_formula.y  modal_logic_formula_ast.h  parser.y  parser_API.h  visitor.cpp  visitor.h
parser_lib/: CMakeLists.txt  ast.cpp  ast.h  lexer.l  main.cpp  parser.h  parser.y  parser_API.cpp  parser_API.h  visitor.cpp  visitor.h
parser_lib/internal/: string_memory_mgr.cpp  string_memory_mgr.h
parser_lib/workaround_non_gcc_headers/: unistd.h
performance_measure/: CMakeLists.txt  input.txt  source.cpp
rest_server/: CMakeLists.txt  command_runner.cpp  command_runner.h  microservice_controller.cpp  microservice_controller.h  modal_logic_setup.txt  source.cpp  task_info.cpp  task_info.h  task_result.cpp  task_result.h
simple_client/: api_wrapper.js  docs.html  frontend_api.js  home.html  howto.html  index.html  samples.html  server_api.js  styles.css  visualizer.js
simple_client/formula_proover_wasm/: formula_proover_wasm.js  formula_proover_wasm.wasm
simple_client/rest_server/: api_wrapper.js
testing/js_formula_parser/: boo.html  foo.js
tests/: CMakeLists.txt  common_tests.cpp  contact_commutativity_tests.cpp  evaluation_tests.cpp  performance_tests.cpp  satisfiability_tests.cpp  source.cpp  system_of_inequalities_tests.cpp  tautology_tests.cpp  term_evaluation_subset_variables_tests.cpp  variables_evaluations_block_stack_tests.cpp  variables_evaluations_block_tests.cpp  variables_retrieving.cpp  variables_retrieving_formula_tests.cpp  variables_retrieving_term.cpp  variables_retrieving_term_tests.cpp
tests/parser/: ast_tree_structure_tests.cpp  formula_building_tests.cpp  visitor_tests.cpp
tools/: cfg_language_generator.py  formula_cfg.txt  formula_generator.py  full_tableau_tree_cfg.txt  out_cfg_language.txt
